# laropticks

./: CMakeLists.txt  Jenkinsfile  OptickEnv  README.md
laropticks/: CMakeLists.txt  Opticks_tool.cc  PDFullSimOpticks_Module.cc  PDFullSimOpticks_module.cc
laropticks/Analysis/: LArSoftTest.ipynb  LArSoft_LightSource_G4_Test.ipynb  LArSoft_Opticks_Test.ipynb  LArSoft_Opticks_Testv2.ipynb  LightSource_LightSource_G4_Test.ipynb  Opticks_G4_LightSource_Visibility_Comparison.ipynb  PDFastSimOpticks_LightSource.ipynb  PDFastSimOpticks_ScintilationTest.ipynb  Scintilation_Tracks.ipynb  gdml_visualization.C  viewer.cxx
laropticks/Analysis/.ipynb_checkpoints/: LArSoftTest-checkpoint.ipynb  LArSoft_LightSource_G4_Test-checkpoint.ipynb  Opticks_G4_LightSource_Visibility_Comparison-checkpoint.ipynb  PDFastSimOpticks_LightSource-checkpoint.ipynb  PDFastSimOpticks_ScintilationTest-checkpoint.ipynb
laropticks/GDML/: LArTPC.gdml  dune10kt_v5_refactored_1x2x6_nowires-v2.gdml  dune10kt_v5_refactored_1x2x6_nowires.gdml  dune10kt_v5_refactored_1x2x6_nowires_NoField.gdml  dune10kt_v5_refactored_1x2x6_nowires_NoField_NoColor.gdml  dune10kt_v5_refactored_1x2x6_nowires_NoFieldv2.gdml  dune10kt_v6_refactored_1x2x6.gdml  dune10kt_v6_refactored_1x2x6_WithAux.gdml  dune10kt_v6_refactored_1x2x6_test.gdml  dune10kt_v6_refactored_nowires.gdml  dunevd10kt_fullvd_wires.gdml  overlapMacro.C  protodunehd_v6_refactored_nowires.gdml  protodunevd_v5_ggd.gdml  test.gdml  testv2.gdml
laropticks/examples/: standard_g4_dune10kt_1x2x6.fcl  standard_g4_opticks_dunevd10kt.fcl  standard_opticks_dune10kt.fcl
laropticks/fcl/: dune10kt_1x2x6_buildopticallibrary_grid.fcl  dune10kt_1x2x6_g4_buildopticallibrary_grid_nowires.fcl  dune10kt_1x2x6_opticks_buildopticallibrary_grid.fcl  dune10kt_HD_Performance.fcl  dune10kt_refactored_buildopticallibrary_grid.fcl  dune10kt_refactored_opticks_buildopticallibrary_grid.fcl  dune10kt_v6_1x2x6_buildopticallibrary_grid.fcl  dune10kt_v6_1x2x6_opticks_buildopticallibrary_grid.fcl  opticks_tool.fcl  protodunehd_buildopticallibrary_grid.fcl  protodunehd_opticks_buildopticallibrary_grid.fcl  standard_g4_dune10kt.fcl  standard_g4_opticks_dunefd10kt.fcl  standard_g4_opticks_dunevd10kt.fcl  standard_opticks_dune10kt.fcl  standard_opticks_dune10kt_1x2x6_supernova_g4.fcl
laropticks/fcl/g4/: standard_g4_dunehd10kt_rice.fcl  standard_g4_dunevd10kt_rice.fcl  standard_g4_marley_dunehd10kt_rice.fcl
laropticks/fcl/optical/: optical_dunevd10kt_rice.fcl
laropticks/include/: AnalysisManagerHelper.h  GPUPrimaryPhoton.h  MySensorIdentifier.h  OpticksHitHandler.h  OpticksInterface.h  types.h
laropticks/source/: AnalysisManagerHelper.cc  CMakeLists.txt  GPUPrimaryPhoton.cc  MySensorIdentifier.cc  OpticksHitHandler.cc  OpticksInterface.cc
ups/: product_deps
